adding breadth-first-search  and linked List option

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-    <title>Knights Travails</title>
-</head>
-<body>
-    <h1>Knights Travails</h1>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Knight's Travails</title>
+    <script src="linkedLists.js" defer></script>
+  </head>
+  <body>
+    <h1>Knight's Travails</h1>
+   
+  </body>
 </html>
